added a new tag for sinup button

--- a/email.html
+++ b/email.html
@@ -15,6 +15,7 @@
         <input type="password" id="password" placeholder="Enter password" required>
 
         <button type="submit">login</button>
+        <button>Sign up</button>
     </form>
 </body>
 
