--- a/email.html
+++ b/email.html
@@ -13,6 +13,7 @@
         <input type="email" id="ert" placeholder="Enter the email" required>
         <label for="password">Password</label>
         <input type="password" id="password" placeholder="Enter password" required>
+        <p>Hai</p>
 
         <button type="submit">login</button>
     </form>
