--- a/email.html
+++ b/email.html
@@ -14,6 +14,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" placeholder="Enter password" required>
         <p>Hai</p>
+        <button>signup</button>
 
         <button type="submit">login</button>
     </form>
